--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.7.1 M
 2020-7-2 Will
 * System Effect Enable now MIDI-learnable.
 * Part Effect Bypass  now MIDI-learnable.
+* Unified all float to bool conversions.
+* Some minor style cleanups.
 
 2020-6-20 Will
 * BugFix: New stand-alone startup crashing on some window managers.
