--- a/Changelog
+++ b/Changelog
@@ -6,6 +6,7 @@ yoshimi 1.7.1 M
   Repurposed the (now redundant) panningRandom type.
 * Framed and highlighted engine level Vol/Pan control groups.
   They now look like the stock inserts.
+* BugFix: Messed up voice selection with above changes :(
 
 2020-7-5 Will
 * BugFix: Part edit SubSynth button showing wrong colour.
