--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.7.1 M
 
+2020-7-30 Will
+* BugFix: NRPN 'Solo' not working. Changed actual control numbers.
+* Revised NRPN recognition, particularly shortform ones.
+* Updated docs.
+* Started ODF format of full list of CCs and NRPNs (in docs).
+
 2020-7-26 Will
 * Merged following fixes from Kristian
   Avoid out-of-bounds phase when moving the phase slider of live
