Applied patch from Hubert

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,8 @@ yoshimi 1.7.1 M
 2020-8-8 Will
 * Removed references to Jack in LV2.
   Used time_t instead of jack_nframes_t
+* Applied patch from Hubert.
+  Removed jack reference from LV2 cmake file.
 
 2020-8-2 Will
 * Clarifed CLI 'solo' controls.
