Provisional fix for SubSynth frequency bug

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.1 M
 
+2020-8-1- Will
+* Provisional fix for SubSynth frequency bug.
+
 2020-8-8 Will
 * Removed references to Jack in LV2.
   Used time_t instead of jack_nframes_t
