Doc updates - no code changes

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.2 rc2
 
+2020-8-16 Will
+* Doc updates - no code changes.
+
 2020-8-12- Will
 * Merged in pull reqeuest for Kristian.
   Completes SubSynth frequency correction for all
