Final doc updates Set release version 1.7.2

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,8 @@
-yoshimi 1.7.2 rc2
+yoshimi 1.7.2
+
+2020-8-16 Will
+* Final doc updates.
+* Set release version 1.7.2
 
 2020-8-16 Will
 * Doc updates - no code changes.
