--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,10 @@
 yoshimi 1.7.2 M
 
 2020-8-19 Will
+* Commented out 'Warnings as errors' in CMakeLists.txt
+  Was causing problems for less experienced builders.
+
+2020-8-19 Will
 * Reverted removal of lv2ext/programs#Interface
   Needed by Carla to identify banks.
 * Ensured last fix was applied to both yoshimi & yoshimi-multi
