--- a/Changelog
+++ b/Changelog
@@ -1,8 +1,10 @@
 yoshimi 1.7.2 M
 
 2020-8-24 Will
-* Enabling part kit items now goes theough indirect transfers.
+* Enabling part kit items now goes through indirect transfers.
   Stops Xruns, but part is now silenced during this.
+* First time enabling of PadSynth applies parameters.
+  Has to silence the part in the precess.
 
 2020-8-19 Will
 * Commented out 'Warnings as errors' in CMakeLists.txt
