--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,7 @@ yoshimi 1.7.2 M
 
 2020-9-2 Will
 * Simplified GUI code for button 3 use.
+* Temporary fix to virtual keyboard default controller.
 
 2020-8-25 Will
 * Click on mixer volume clears all overloads on that column.
