--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,11 @@
 yoshimi 1.7.2 M
 
+2020-9-11 Will
+* Fixed some confusing CLI info typos.
+* Corrected CLI anomaly with instrument default copyright.
+  It was possible to set it outside the part context
+  and sometimes this only worked for part 1.
+
 2020-9-6 Will
 * Major revision of virtual keyboard.
   Controller values match existing settings.
