--- a/Changelog
+++ b/Changelog
@@ -8,6 +8,7 @@ yoshimi 1.7.2 M
 * Split indirectMain out of indirectTransfers.
 * Cleaned up indirectMain.
 * Split indirectBank out of indirectTransfers.
+* Split indirectConfig out of indirectTransfers.
 
 2020-9-11 Will
 * Fixed some confusing CLI info typos.
