--- a/Changelog
+++ b/Changelog
@@ -9,6 +9,7 @@ yoshimi 1.7.2 M
 * Cleaned up indirectMain.
 * Split indirectBank out of indirectTransfers.
 * Split indirectConfig out of indirectTransfers.
+* Split indirectPart out of indirectTransfers.
 
 2020-9-11 Will
 * Fixed some confusing CLI info typos.
