Split indirectScales out of indirectTransfers

--- a/Changelog
+++ b/Changelog
@@ -10,6 +10,7 @@ yoshimi 1.7.2 M
 * Split indirectBank out of indirectTransfers.
 * Split indirectConfig out of indirectTransfers.
 * Split indirectPart out of indirectTransfers.
+* Split indirectScales out of indirectTransfers.
 
 2020-9-11 Will
 * Fixed some confusing CLI info typos.
