--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,8 @@
 yoshimi 1.7.3
 
+2020-12-23 Will
+BugFix: secondary instance banks not fiding local dir.
+
 2020-11-15 Will
 BugFix: GUI not setting kit item names.
 
