--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,12 @@
 yoshimi 1.7.4 M
 
 2021-1-5 Will
+* Unison Invert made dynamic.
+* Oscil pfase random now label resizes.
+  missed these earlier :(
+* Small AddSynth position adjustments.
+
+2021-1-5 Will
 * Merged in resize branch
 * Corrected date below
 * Reinstated Ring mod sideband trial
