Revert "Reinstated Ring mod sideband trial"
This reverts commit 21a14bbfaed22e012e0588745b17379a14197c58.

Unison Invert made dynamic
Oscil phase random now label resizes

--- a/Changelog
+++ b/Changelog
@@ -1,15 +1,14 @@
 yoshimi 1.7.4 M
 
-2021-1-5 Will
+2021-1-6 Will
 * Unison Invert made dynamic.
-* Oscil pfase random now label resizes.
+* Oscil phase random now label resizes.
   missed these earlier :(
 * Small AddSynth position adjustments.
 
 2021-1-5 Will
 * Merged in resize branch
 * Corrected date below
-* Reinstated Ring mod sideband trial
 
 2021-1-5 Will
 Temporarily disabled ring mod sideband feature.
