Removed some redundant code from Interchange

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.7.4 M
 
 2021-1-7 Will
 * Improved GUI sanity check.
+* Removed some redundant code from Interchange.
+  it was doing nothing but still being processed
 
 2021-1-6 Will
 * Unison Invert made dynamic.
