--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,13 @@
 yoshimi 1.7.4 M
 
 2021-1-10 Will
+* BugFix: GUI Part effects text not resizing
+  when changing effect type
+* BugFix: GUI oscsize/bufsize not seeing lowest setting.
+  As these are always powers of 2 it was simpler to
+  just use bitFindHigh and make an offset adjustment.
+
+2021-1-10 Will
 * Removed ring mod sideband code.
   Proved to be unnecessary.
 * Fixed spelling errors!
