--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,9 @@
 yoshimi 1.7.4 M
 
+2021-1-12 Will
+* Started revision of part effects window.
+  Now uses sanity check
+
 2021-1-10 Will
 * BugFix: GUI Part effects text not resizing
   when changing effect type
