Possible fix for LV2 first startup crash

--- a/Changelog
+++ b/Changelog
@@ -3,6 +3,7 @@ yoshimi 1.7.4 M
 2021-1-17 Will
 * Cleaned up ConsoleUI
 * Disabled YoshiWin code
+* Possible fix for LV2 first startup crash
 
 2021-1-16 Will
 * Merged in new denormal code.
