Revised CLI and Data2text for BPI reporting

--- a/Changelog
+++ b/Changelog
@@ -2,6 +2,8 @@ yoshimi 1.7.4 M
 
 2021-1-19 Will
 * Improved end of text lists ID.
+* Revised CLI and Data2text for BPI reporting.
+  Setting CLI input as ratio still to do.
 
 2021-1-18 Will
 * Merged in MIDI LFO sync from Kristian.
