--- a/dev_notes/ToDo.txt
+++ b/dev_notes/ToDo.txt
@@ -1,10 +1,10 @@
 BUG! If jack is selected for audio but there are no physical ports Yoshimi quits with CLI warning - should run with gui warning as well, or better still loop back to try alsa.
 
+Rare bug: stand-alone GUI freezes and no further system changes if new instance started while instrument change in progress.
+
 Minor bug Multi instances produce jack error reports when main instance closed, even if they have been closed first - been there since V 1.4.1 :(
 
 GUI Oddity. Pres spacebar on startup and you get directed to reset. Press it after tabbing down checkboxes and you enter the MIDI learn dialogue.
-
-Investigate AddSynth amplitude modulation. Basic code is commented out in ring modulation.
 
 Revise GUI voice list related to voice editor.
 
