Revised more instrument banks

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,12 @@
 yoshimi 1.7.4 M
 
+2021-1-23 Will
+* Revised the following instrument banks:
+    Choir and Voice
+    Misc
+    Plucked
+
+
 2021-1-21 Will
 * Small code cleanups
 
